# aer-extract-aws-goes

./: .gitignore  README.md  pyproject.toml
.planning/: REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/08-utm-zone-lookup-table-extraction-engine/: 08-01-SUMMARY.md  08-02-SUMMARY.md  08-03-SUMMARY.md
.planning/quick/260327-mov-parallelize-search-results-loop-in-extra/: 260327-mov-CONTEXT.md  260327-mov-PLAN.md  260327-mov-RESEARCH.md  260327-mov-SUMMARY.md  260327-mov-VERIFICATION.md
.planning/quick/260423-41a-refactor-lut-storage-to-use-fsspec-and-h/: 260423-41a-PLAN.md  260423-41a-SUMMARY.md
components/aer/extract_aws_goes/: __init__.py  areas.yaml  core.py  generate_luts.py  lut.py  utils.py
components/aer/extract_aws_goes/data/: lut_config.json
development/local/: benchmark_lut_engine.py
docs/: codemap.csv
projects/aer-extract-aws-goes/: pyproject.toml
test/components/aer/extract_aws_goes/: test_core.py  test_gdal_engine.py  test_lut.py  test_utm_grouping.py
