[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aer-extract-aws-goes-workspace"
version = "1.1.0"
description = "aer plugin for AWS GOES data extraction"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [{ name = "Fran Dorr" }]
dependencies = [
    "aer-core",
    "h5netcdf[h5py]>=1.8.1",
    "netcdf4>=1.7.4",
    "pyproj>=3.6.0",
    "pyresample>=1.35.0",
    "rasterio>=1.5.0",
    "gdal==3.10.3",
    "rioxarray>=0.22.0",
    "satpy>=0.60.0",
    "xarray>=2026.2.0",
    "zarr>=2.18.0",
]


[project.entry-points."aer.plugins"]
extract_aws_goes = "aer.extract_aws_goes.core:AwsGoesExtractor"


[tool.uv]
sources.aer-extract-aws-goes = { workspace = true }
sources.aer-core = { path = "/root/repos/aer/projects/aer-core", editable = true }
sources.aer-search-earthaccess = { path = "/root/repos/aer-search-earthaccess/projects/aer-search-earthaccess", editable = true }
sources.majortom-eg = { path = "/root/repos/majortom/src/majortom_eg", editable = true }
managed = true

[tool.uv.workspace]
members = ["projects/*"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
dev-mode-dirs = ["components", "bases", "development", "."]

[tool.ruff]
exclude = [
    ".git",
    ".github",
    "__pycache__",
    ".ruff_cache",
    "dist",
    ".venv",
    "./development/*.py",
]
line-length = 120

[tool.basedpyright]
venvPath = "."
venv = ".venv"
extraPaths = ["components/", "bases/"]

[dependency-groups]
dev = [
    "aer-extract-aws-goes",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "line-profiler>=5.0.2",
    "marimo>=0.21.1",
    "matplotlib>=3.10.8",
    "polylith-cli>=1.43.0,<2.0.0",
    "pytest>=9.0.2,<10.0.0",
    "python-semantic-release>=10.5.3,<11.0.0",
    "scalene>=2.2.1",
]

[tool.pytest.ini_options]
testpaths = ["test"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
