[build-system]
requires = ["hatchling", "hatch-polylith-bricks"]
build-backend = "hatchling.build"

[project]
name = "aer-extract-aws-goes"
version = "1.7.0"
description = "Polylith project for the extract-aws-goes plugin"
readme = "README.md"
authors = [{ name = "Fran Dorr" }]

requires-python = ">=3.13"

dependencies = [
    "aer-core",
    "h5netcdf[h5py]>=1.8.1",
    "netcdf4>=1.7.4",
    "pyresample>=1.35.0",
    "rasterio>=1.5.0",
    "rioxarray>=0.22.0",
    "s3fs>=2025.2",
    "satpy>=0.60.0",
    "xarray>=2026.2.0",
    "huggingface-hub>=1.12.0",
    "blosc2>=4.1.2",
    "odc-geo>=0.5.1",
    "shapely>=2.1.2",
]

[project.urls]
Homepage = "https://github.com/frandorr/aer-extract-aws-goes"
Issues = "https://github.com/frandorr/aer-extract-aws-goes/issues"
Repository = "https://github.com/frandorr/aer-extract-aws-goes"

[project.entry-points."aer.plugins"]
extract_aws_goes = "aer.extract_aws_goes.core:AwsGoesExtractor"

[tool.hatch]
build.dev-mode-dirs = [ "../../components", "../../bases", "../../development", "." ]
build.hooks.polylith-bricks = {}
build.targets.wheel.packages = ["aer"]

[tool.polylith]
bricks."../../components/aer/extract_aws_goes" = "aer/extract_aws_goes"
